# quantum-resistant-rustykey

./: .gitignore  .gitmodules  .npmignore  .npmrc  CHANGELOG.md  CMakeLists.txt  README.md  biome.json  build-wasm.sh  main.cpp  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quantum-resistant-rustykey-0.10.0.tgz  test.html  tsconfig.json  tsconfig.lint.json  tsdown.config.ts  tsup.config.ts
.changeset/: afraid-schools-mix.md  blue-areas-lay.md  blue-emus-lick.md  eleven-pandas-relate.md  famous-areas-sneeze.md  floppy-bars-dream.md  giant-items-push.md  happy-showers-lay.md  honest-corners-send.md  major-drinks-appear.md  metal-hands-attack.md  mighty-tigers-kneel.md  purple-schools-march.md  seven-pets-dance.md  shiny-shirts-poke.md  slimy-lemons-tease.md  soft-places-argue.md  stale-rice-decide.md  stale-seas-vanish.md  tame-oranges-love.md  tiny-plants-boil.md  warm-teams-pay.md  weak-donuts-hear.md  yellow-groups-fetch.md
.github/: README.md
.github/workflows/: publish.yml
coverage/: clover.xml  coverage-final.json  index.html  index.ts.html  kyber_crystals_wasm_engine copy.js.html  kyber_crystals_wasm_engine.js.html  types.ts.html
coverage/src/: index.html  index.ts.html  kyber_crystals_wasm_engine copy.js.html  kyber_crystals_wasm_engine.js.html  types.ts.html
coverage/test_ssr_nextjs_react/app/: index.html  layout.tsx.html  (+1 more)
docs/: SQISIGN-WEBGPU.md
examples/browser-demo/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
fndsa-rs/: Cargo.toml
fndsa-rs/src/: lib.rs
ietf-draft-cose-sqisign/: draft-mott-cose-sqisign-01.md  draft-mott-cose-sqisign-02.md  draft-mott-cose-sqisign-02.xml  draft-mott-cose-sqisign-03.md  draft-mott-cose-sqisign-04.md  draft-mott-cose-sqisign-04.xml  draft-mott-cose-sqisign-05.md  draft-mott-cose-sqisign-05.xml  draft-mott-cose-sqisign-06.md  draft-mott-cose-sqisign-06.xml  draft-mott-cose-sqisign-latest.md  test.xml
ietf-draft-cose-sqisign/.refcache/: reference.I-D.ietf-cose-dilithium.xml  reference.I-D.ietf-cose-falcon.xml  reference.RFC.4086.xml  reference.RFC.7049.xml  reference.RFC.7515.xml  reference.RFC.8152.xml  reference.RFC.9054.xml
mlkem-src/: mlkem1024.ts  mlkem512.ts  mlkem768.ts
scripts/: build-fndsa-wasm.mjs  build-wasm.mjs  bundle-accel-worker.mjs  bundle-mlkem.mjs  bundle-signatures.mjs  copy-assets.mjs  verify-dist.mjs
src/: fndsa.ts  index.test.ts  index.ts  kyber_crystals_wasm_engine copy.js  kyber_crystals_wasm_engine copy.wasm  kyber_crystals_wasm_engine.js  kyber_crystals_wasm_engine.wasm  library-worker.js  mldsa.ts  signature-common.ts  slhdsa.ts  sqisign-accel-env.ts  sqisign-accel-worker.ts  sqisign-kat-lvl1.ts  sqisign-webgpu.ts  sqisign.ts  types.ts  wasm-worker.ts
src/mlKem/: mlKem768.ts
src/rustykeyPostQuantum/: deps.ts  errors.ts  mlKem1024.ts  mlKem512.ts
src/webgpu/: init.ts
test_ssr_nextjs_react/: package.json
test_ssr_nextjs_react/.next/: trace
wasm/: Makefile  build_sqisign_lvl1.sh  build_sqisign_lvl3.sh  build_sqisign_lvl5.sh  wasm_wrapper_1024.c  wasm_wrapper_512.c  wasm_wrapper_768.c  wasm_wrapper_falcon_1024.c  wasm_wrapper_falcon_512.c  wasm_wrapper_mldsa_65.c  wasm_wrapper_mldsa_87.c  wasm_wrapper_sqisign_lvl1.c  wasm_wrapper_sqisign_lvl3.c  wasm_wrapper_sqisign_lvl5.c
(+19 files in other folders)
